# SMTP-server

./: README.md
rust/: .env  Cargo.toml  README.md  build_err.txt  output.txt
rust/src/: encryption.rs  main.rs
