[package]
name = "cybertemp_smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
once_cell = "1.19"
mailparse = "0.14"
surrealdb = "2.3.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["tokio-rustls", "rustls-tls-webpki-roots"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
rand = "0.8"
