[package]
name = "cybertemp_smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
once_cell = "1.19"
mailparse = "0.14"
surrealdb = "2.3.7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["tokio-rustls", "rustls-tls-webpki-roots"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
chrono = "0.4"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
rand = "0.8"
arc-swap = "1.7"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
hex = "0.4"

# Release build tuned for runtime throughput (compiled once, runs for weeks).
# Fat LTO + a single codegen unit let the optimizer inline across the whole
# crate graph — meaningful on the CPU-bound hot path (mailparse + AES-GCM seal).
# NOTE: panic stays "unwind" (the default) ON PURPOSE — the batch-worker
# supervisor restarts the worker by catching its panic via `handle.await`;
# `panic = "abort"` would kill the whole process instead. Switch lto to "thin"
# if local compile time becomes painful (keeps most of the win).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
